--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
+    "nodemailer": "^6.6.3",
     "morgan": "^1.10.0",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
